src/test/c/accept/35-class-implements.arcx
class Implementadora using MiInterfaz {
    foo: int = 1;
} 