src/test/c/reject/35-nested-class-incomplete.arcx
class Outer {
    class Inner {
        a:int=1;
    // Falta cierre de clase Inner y Outer
} 